--- a/src/ForeverCore/Properties/launchSettings.json
+++ b/src/ForeverCore/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ForeverCore": {
       "commandName": "Project",
-      "commandLineArgs": "start \"c:\\temp\\test.cmd\" -r 2"
+      "commandLineArgs": "start \"%temp%\\test.cmd\" -r 2"
     }
   }
 }
